update sysDept
