# admin-api-golang/router/router.go
@@ -40,4 +40,10 @@ func register(router *gin.Engine) {
 	router.PUT("/api/post/updateStatus", controller.UpdateSysPostStatus)
 	router.GET("/api/post/list", controller.GetSysPostList)
 	router.GET("/api/post/vo/list", controller.QuerySysPostVoList)
+	router.POST("/api/dept/add", controller.CreateSysDept)
+	router.GET("/api/dept/vo/list", controller.QuerySysDeptVoList)
+	router.GET("/api/dept/info", controller.GetSysDeptById)
+	router.PUT("/api/dept/update", controller.UpdateSysDept)
+	router.DELETE("/api/dept/delete", controller.DeleteSysDeptById)
+	router.GET("/api/dept/list", controller.GetSysDeptList)
 }
